sort.pancake.BasicPancake.scala.error
Compilation error:
BasicPancake:6: error: value unary_! is not a member of Int
  while (!finished != 0) {
         ^